Added redirect and link validation function

--- a/app/views/layout/layout.phtml
+++ b/app/views/layout/layout.phtml
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Im A Layout!</title>
+<?php print PWEL_CONTROLLER::validateCss("css/style.css"); ?>
 </head>
 <body>
 <?php print $variable; ?>
